# mux-videos-lti-producer

./: .gitignore  MANIFEST.in  Makefile  README.rst  gulpfile.js  manage.py  package.json  setup.cfg
muxltiproducer/: admin.py  apps.py  models.py  mux.py  openedx.py  subtitles.py  tasks.py  urls.py  views.py
muxltiproducer/management/commands/: mux_signing_key.py  mux_sync.py
muxltiproducer/migrations/: 0001_initial.py
muxltiproducer/static/muxltiproducer/css/: muxltiproducer.css
muxltiproducer/static/muxltiproducer/js/: muxltiproducer.js
muxltiproducer/templates/muxltiproducer/: _base.html  _instructor_asset.html  _video.html  edit.html  watch.html
tests/: settings.py  test_models.py  test_mux.py  test_openedx.py
