[metadata]
name = mux-lti-producer
version = 0.0.1
description = Mux.com LTI server
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Strata
author_email = hello@strata.co.jp
url = https://github.com/strata-kk/mux-videos-lti-producer
license = GNU Affero General Public License v3
license_file = LICENSE.txt
classifiers =
    Framework :: Django
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = muxltiproducer
zip_safe = True
include_package_data = True
install_requires =
    django
    pyJWT[crypto]
    mux-python
    django-storages

[options.extras_require]
dev =
    black
    django-stubs
    ipdb
    pip-tools
    pylint
    pylint-django

[mypy]
plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = tests.settings

[wheel]
universal = 1
